--- a/sass/components/_titles.scss
+++ b/sass/components/_titles.scss
@@ -2,6 +2,7 @@
   margin-bottom: 20px;
 
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   text-align: unset;
