--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -36,16 +36,15 @@
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 
-.footer__socials__icon--link:hover,
-.footer__socials__icon--link:focus {
-  background-color: var(--accent-color);
-}
-
-.footer__socials__icon--link:hover .footer__socials__icon--svg,
-.footer__socials__icon--link:focus .footer__socials__icon--svg {
-  fill: var(--dark-bg-text);
+  &:hover .footer__socials__icon--svg,
+  &:focus .footer__socials__icon--svg {
+    fill: var(--dark-bg-text);
+  }
 }
 
 .footer__socials__icon--svg {
