--- a/sass/components/_current-page.scss
+++ b/sass/components/_current-page.scss
@@ -10,18 +10,18 @@
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
 
-.current-page::after {
-  display: block;
-  content: "";
+  &::after {
+    display: block;
+    content: "";
 
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: -1.5px;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1.5px;
 
-  background: var(--accent-color);
-  border-radius: 2px;
+    background: var(--accent-color);
+    border-radius: 2px;
+  }
 }
