--- a/sass/layouts/_navigations.scss
+++ b/sass/layouts/_navigations.scss
@@ -12,24 +12,24 @@
   &:focus::after {
     opacity: 1;
   }
-}
 
-.nav__link::after {
-  display: block;
-  content: "";
+  &::after {
+    display: block;
+    content: "";
 
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  left: 0;
-  bottom: -1.5px;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    bottom: -1.5px;
 
-  background: var(--accent-color);
-  border-radius: 2px;
+    background: var(--accent-color);
+    border-radius: 2px;
 
-  opacity: 0;
+    opacity: 0;
 
-  transition-property: opacity;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
